# AI-class-summaries

./: .gitignore  Makefile  README.md  pyproject.toml  zoom
.github/workflows/: ci.yml
zoom_downloader/: __init__.py  browser.py  cli.py  downloader.py  scraper.py  transcript.py
