[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom-downloader"
version = "0.2.0"
description = "CLI to download Zoom recordings and transcripts."
readme = { text = "Zoom downloader CLI.", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.58,<2",
    "click>=8.1,<9",
    "requests>=2.32,<3",
    "rich>=14,<15",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[project.scripts]
zoom = "zoom_downloader.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["zoom_downloader*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
